[package]
name = "my-iced-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/mars2nico/iced.git", branch = "devel", features = ["tokio", "debug", "highlighter"] }
tokio = { version = "1", features = ["fs"] }
rfd = "0.12"
